Create first recipe

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 	</head>
 	<body>
 		<h1>Odin Recipes</h1>
+		<a href="/recipes/pizza-margetita.html">Authentic Pizza Margherita</a>
 	</body>
 </html>
