--- a/recipes/pizza-margetita.html
+++ b/recipes/pizza-margetita.html
@@ -5,60 +5,77 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Authentic Pizza Margherita</title>
+		<!-- CSS -->
+		<link rel="stylesheet" href="../style.css" />
 	</head>
 	<body>
-		<h1>Authentic Pizza Margherita</h1>
-		<img
-			src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fpublic-assets-ucg.meredithcorp.io%2F0608a6c0ea002926ad1ba9d36fb4819f%2F1453815.jpg&w=596&h=596&c=sc&poi=face&q=60"
-			alt="Authentic Margherita Pizza"
-		/>
-		<h2>Simple, yet effective</h2>
-		<p>Inspired by the pizza at Bar Del Corso, this Pizza Margherita features tomato sauce, mozzarella, and basil, with just a hint of sea salt.</p>
-		<h2>Ingredients</h2>
-		<p><em>These ingredients are ideal for 4 servings</em></p>
-		<ul>
-			<li>3 ½ cups all-purpose flour</li>
-			<li>1 teaspoon salt</li>
-			<li>1 cup water</li>
-			<li>1 (.25 ounce) package active dry yeast</li>
-			<li>1 pinch white sugar</li>
-			<li>¼ cup flour for dusting</li>
-			<li>2 cups pizza sauce</li>
-			<li>20 slices fresh mozzarella cheese</li>
-			<li>20 leaves fresh basil</li>
-			<li>olive oil</li>
-			<li>sea salt to taste</li>
-		</ul>
-		<h2>Now that we know what we need, lets start preparing the pizza</h2>
-		<ol>
-			<li>
-				<p>Stir flour and 1 teaspoon salt in a bowl. Set aside.</p>
-			</li>
-			<li>
-				<p>Mix water, yeast, and sugar in a large bowl. Let stand until yeast begins to form a creamy foam, about 5 minutes.</p>
-			</li>
-			<li>
-				Stir half the flour mixture into yeast mixture until no dry spots remain. Stir in remaining flour, 1/2 cup at a time, mixing well after each
-				addition. When dough pulls together, turn it out onto a lightly floured surface and knead until smooth and elastic, about 8 minutes.
-			</li>
-			<li>
-				Lightly oil a large bowl, then place dough in the bowl and turn to coat with oil. Cover with a light cloth and let rise in a warm place (80 to
-				95 degrees F (27 to 35 degrees C)) until doubled in volume, about 1 hour. Punch dough down, divide into 4 equal pieces, and form each into a
-				ball.
-			</li>
-			<li>Preheat oven with a pizza stone to 500 degrees F (260 degrees C).</li>
-			<li>
-				Stretch out and pat 1 dough ball to form a circle 10 to 12 inches in diameter. Place dough on a lightly floured pizza peel. Top with 1/2 cup
-				of tomato sauce and spread to cover within an inch of the edge of the dough. Arrange 5 slices of mozzarella cheese on top of the tomato sauce,
-				then place 5 basil leaves on top. Drizzle pizza with 1 tablespoon olive oil and sprinkle with sea salt to taste. Repeat for 3 remaining dough
-				balls.
-			</li>
-			<li>
-				Slide each pizza onto the pizza stone in the preheated oven. Bake until cheese is bubbly and the underside of the crust is golden brown, 5 to
-				7 minutes.
-			</li>
-		</ol>
-		<h3>Bon Apetit!</h3>
-		<h2>How is it? Let me know.</h2>
+		<div class="intro">
+			<div class="intro-content">
+				<h1>Authentic Pizza Margherita</h1>
+				<div class="navigation">
+					<a href="../index.html" class="btn">Back</a>
+				</div>
+			</div>
+			<div class="media">
+				<img
+					src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fpublic-assets-ucg.meredithcorp.io%2F0608a6c0ea002926ad1ba9d36fb4819f%2F1453815.jpg&w=596&h=596&c=sc&poi=face&q=60"
+					alt="Authentic Margherita Pizza"
+				/>
+			</div>
+		</div>
+		<div class="container">
+			<h2>Simple, yet effective</h2>
+			<p>Inspired by the pizza at Bar Del Corso, this Pizza Margherita features tomato sauce, mozzarella, and basil, with just a hint of sea salt.</p>
+
+			<h2>Ingredients</h2>
+			<p><em>These ingredients are ideal for 4 servings</em></p>
+			<ul class="list">
+				<li>3 ½ cups all-purpose flour</li>
+				<li>1 teaspoon salt</li>
+				<li>1 cup water</li>
+				<li>1 (.25 ounce) package active dry yeast</li>
+				<li>1 pinch white sugar</li>
+				<li>¼ cup flour for dusting</li>
+				<li>2 cups pizza sauce</li>
+				<li>20 slices fresh mozzarella cheese</li>
+				<li>20 leaves fresh basil</li>
+				<li>olive oil</li>
+				<li>sea salt to taste</li>
+			</ul>
+			<h2>Now that we know what we need, lets start preparing the pizza</h2>
+			<ol class="list">
+				<li>
+					<p>Stir flour and 1 teaspoon salt in a bowl. Set aside.</p>
+				</li>
+				<li>
+					<p>Mix water, yeast, and sugar in a large bowl. Let stand until yeast begins to form a creamy foam, about 5 minutes.</p>
+				</li>
+				<li>
+					Stir half the flour mixture into yeast mixture until no dry spots remain. Stir in remaining flour, 1/2 cup at a time, mixing well after each
+					addition. When dough pulls together, turn it out onto a lightly floured surface and knead until smooth and elastic, about 8 minutes.
+				</li>
+				<li>
+					Lightly oil a large bowl, then place dough in the bowl and turn to coat with oil. Cover with a light cloth and let rise in a warm place (80
+					to 95 degrees F (27 to 35 degrees C)) until doubled in volume, about 1 hour. Punch dough down, divide into 4 equal pieces, and form each
+					into a ball.
+				</li>
+				<li>Preheat oven with a pizza stone to 500 degrees F (260 degrees C).</li>
+				<li>
+					Stretch out and pat 1 dough ball to form a circle 10 to 12 inches in diameter. Place dough on a lightly floured pizza peel. Top with 1/2 cup
+					of tomato sauce and spread to cover within an inch of the edge of the dough. Arrange 5 slices of mozzarella cheese on top of the tomato
+					sauce, then place 5 basil leaves on top. Drizzle pizza with 1 tablespoon olive oil and sprinkle with sea salt to taste. Repeat for 3
+					remaining dough balls.
+				</li>
+				<li>
+					Slide each pizza onto the pizza stone in the preheated oven. Bake until cheese is bubbly and the underside of the crust is golden brown, 5
+					to 7 minutes.
+				</li>
+			</ol>
+			<h3>Bon Apetit!</h3>
+			<h2>How is it? Let me know.</h2>
+			<div class="navigation">
+				<a href="../index.html" class="btn">Back</a>
+			</div>
+		</div>
 	</body>
 </html>
