Style intro section and create notice class

--- a/recipes/pizza-margetita.html
+++ b/recipes/pizza-margetita.html
@@ -28,7 +28,9 @@
 			<p>Inspired by the pizza at Bar Del Corso, this Pizza Margherita features tomato sauce, mozzarella, and basil, with just a hint of sea salt.</p>
 
 			<h2>Ingredients</h2>
-			<p><em>These ingredients are ideal for 4 servings</em></p>
+			<p class="notice">
+				<em>These ingredients are ideal for 4 servings</em>
+			</p>
 			<ul class="list">
 				<li>3 ½ cups all-purpose flour</li>
 				<li>1 teaspoon salt</li>
@@ -72,7 +74,7 @@
 				</li>
 			</ol>
 			<h3>Bon Apetit!</h3>
-			<h2>How is it? Let me know.</h2>
+			<h2 class="notice">How is it? Let me know.</h2>
 			<div class="navigation">
 				<a href="../index.html" class="btn">Back</a>
 			</div>
